modified : faperta.html

--- a/templates/fisip.html
+++ b/templates/fisip.html
@@ -7,6 +7,6 @@
     <title>FISIP</title>
 </head>
 <body>
-    <h1>FISIP</h1>
+    <center><h1>FAKULTAS ILMU SOSIAL DAN ILMU POLITIK</h1></center>
 </body>
 </html>
