--- a/templates/fkip.html
+++ b/templates/fkip.html
@@ -7,6 +7,6 @@
     <title>FKIP</title>
 </head>
 <body>
-    <h1>FKIP</h1>
+    <center><h1>FAKULTAS KEGURUAN DAN ILMU PENDIDIKAN</h1></center>
 </body>
 </html>
