--- a/templates/pascasarjana.html
+++ b/templates/pascasarjana.html
@@ -7,6 +7,6 @@
     <title>PASCASARJANA</title>
 </head>
 <body>
-    <h1>PASCASARJANA</h1>
+    <center><h1>PASCASARJANA</h1></center>
 </body>
 </html>
