--- a/templates/faperta.html
+++ b/templates/faperta.html
@@ -7,6 +7,6 @@
     <title>FAPERTA</title>
 </head>
 <body>
-    <center><h1>FAPERTA</h1></center>
+    <center><h1>FAKULTAS PERTANIAN</h1></center>
 </body>
 </html>
