--- a/templates/feb.html
+++ b/templates/feb.html
@@ -7,6 +7,6 @@
     <title>FEB</title>
 </head>
 <body>
-    <h1>FEB</h1>
+    <center><h1>FAKULTAS EKONOMI DAN BISNIS</h1></center>
 </body>
 </html>
