--- a/templates/fk.html
+++ b/templates/fk.html
@@ -1,12 +1,137 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="itr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FK</title>
+    <title>menu | UNTIRTA </title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static "style.css"%}">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <center><h1>FAKULTAS KEDOKTERAN</h1></center>
+  <div class="sidebar close">
+    <div class="logo-details">
+      <i class='bx bxs-institution'></i>
+      <span class="logo_name">UNTIRTA</span>
+    </div>
+    <ul class="nav-links">
+      <li>
+        <a href="#">
+          <i class='bx bx-directions'></i>
+          <span class="link_name">FAPERTA</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FAPERTA</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-bar-chart-alt-2'></i>
+          <span class="link_name">FEB</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FEB</a></li>
+        </ul>
+      </li>
+      
+      <li>
+        <a href="#">
+          <i class='bx bx-door-open'></i>
+          <span class="link_name">FH</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FH</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-briefcase-alt-2'></i>
+          <span class="link_name">FISIP</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FISIP</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-clinic'></i>
+          <span class="link_name">FK</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FK</a></li>
+        </ul>
+      </li>
+      
+      <li>
+        <a href="#">
+          <i class='bx bx-book-reader'></i>
+          <span class="link_name">FKIP</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FKIP</a></li>
+        </ul>
+      </li>
+
+      <li>
+        <a href="#">
+          <i class='bx bx-buildings'></i>
+          <span class="link_name">FT</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FT</a></li>
+        </ul>
+      </li>
+      
+      <li>
+        <a href="#">
+          <i class='bx bx-vector'></i>
+          <span class="link_name">PASCASARJANA</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">PASCASARJANA</a></li>
+        </ul>
+      </li>
+         
+      
+      <li>
+    <div class="profile-details">
+      <div class="profile-content">
+        <img src="https://i.pinimg.com/564x/84/5a/0a/845a0a4e80235cdec92525e18ff92131.jpg" alt="profileImg">
+      </div>
+      <div class="name-job">
+        <div class="profile_name">Sela</div>
+      </div>
+      <i class='bx bx-log-out' ></i>
+    </div>
+  </li>
+</ul>
+  </div>
+<section class="home-section">
+    <nav>
+    <div class="home-content">      
+      <i class='bx bx-menu' ></i>
+      <span class="Menu">FK</span><br><br></nav>
+    </div><br><br><br>
+   <h2 style="margin: 15px;text-align:center;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman'margin-top: 60px; margin-left: 50px; margin-right: 50px" id="">Fakultas Kedokteran
+
+     <br>
+   </h2>
+     <p style="margin-left: 50px; margin-right: 50px; margin-top:5px; margin-bottom:8px; font-family:Arial, Helvetica, sans-serif; text-align:justify">FK Untirta baru diresmikan pada tahun 2019 melalui SK Menteri Riset Teknologi dan Pendidikan Tinggi Republik Indonesia Nomor 283/KPT/I/2019. Fakultas ini menyediakan 5 jurusan dengan mengusung strategi untuk mendukung program kesehatan di provinsi Banten. FK Untirta juga mempertimbangkan posisi strategis Banten dan memperhatikan banyaknya kawasan industri yang tersebar di Banten. Oleh sebab itu, Kedokteran Kerja (Okupasi) dijadikan keunggulan dari jurusan Kedokteran fakultas ini.
+    
+    <br>
+    <br>
+    Jurusan Kuliah
+    <ul style="margin-left: 75px; margin-right: 50px; margin-top:5px; margin-bottom:8px; font-family:Arial, Helvetica, sans-serif; text-align:justify">
+      <li>Ilmu Keolahragaan</li>
+      <li>Ilmu Gizi</li>
+      <li>Ilmu Kedokteran</li>
+      <li>Keperawatan</li>
+    </ul>
+  </p>
+  </section>
+
+  <script src="{% static "script.js" %}" type="text/javascript"></script>
 </body>
 </html>
