--- a/templates/fkip.html
+++ b/templates/fkip.html
@@ -1,12 +1,152 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="itr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FKIP</title>
+    <title>menu | UNTIRTA </title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static "style.css"%}">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <center><h1>FAKULTAS KEGURUAN DAN ILMU PENDIDIKAN</h1></center>
+  <div class="sidebar close">
+    <div class="logo-details">
+      <i class='bx bxs-institution'></i>
+      <span class="logo_name">UNTIRTA</span>
+    </div>
+    <ul class="nav-links">
+      <li>
+        <a href="#">
+          <i class='bx bx-directions'></i>
+          <span class="link_name">FAPERTA</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FAPERTA</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-bar-chart-alt-2'></i>
+          <span class="link_name">FEB</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FEB</a></li>
+        </ul>
+      </li>
+      
+      <li>
+        <a href="#">
+          <i class='bx bx-door-open'></i>
+          <span class="link_name">FH</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FH</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-briefcase-alt-2'></i>
+          <span class="link_name">FISIP</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FISIP</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">
+          <i class='bx bx-clinic'></i>
+          <span class="link_name">FK</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FK</a></li>
+        </ul>
+      </li>
+      
+      <li>
+        <a href="#">
+          <i class='bx bx-book-reader'></i>
+          <span class="link_name">FKIP</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FKIP</a></li>
+        </ul>
+      </li>
+
+      <li>
+        <a href="#">
+          <i class='bx bx-buildings'></i>
+          <span class="link_name">FT</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">FT</a></li>
+        </ul>
+      </li>
+      
+      <li>
+        <a href="#">
+          <i class='bx bx-vector'></i>
+          <span class="link_name">PASCASARJANA</span>
+        </a>
+        <ul class="sub-menu blank">
+          <li><a class="link_name" href="#">PASCASARJANA</a></li>
+        </ul>
+      </li>
+         
+      
+      <li>
+    <div class="profile-details">
+      <div class="profile-content">
+        <img src="https://i.pinimg.com/564x/84/5a/0a/845a0a4e80235cdec92525e18ff92131.jpg" alt="profileImg">
+      </div>
+      <div class="name-job">
+        <div class="profile_name">Sela</div>
+      </div>
+      <i class='bx bx-log-out' ></i>
+    </div>
+  </li>
+</ul>
+  </div>
+<section class="home-section">
+    <nav>
+    <div class="home-content">      
+      <i class='bx bx-menu' ></i>
+      <span class="Menu">FKIP</span><br><br></nav>
+    </div><br><br><br>
+   <h2 style="margin: 15px;text-align:center;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman'margin-top: 60px; margin-left: 50px; margin-right: 50px" id="">Fakultas Keguruan dan Ilmu Pendidikan
+
+     <br>
+   </h2>
+     <p style="margin-left: 50px; margin-right: 50px; margin-top:5px; margin-bottom:8px; font-family:Arial, Helvetica, sans-serif; text-align:justify"> Fakultas Keguruan dan Ilmu Pendidikan (FKIP) juga termasuk dari tiga fakultas tertua di Untirta. Pertama kali berdiri tahun 1981 dengan nama Sekolah Tinggi Keguruan dan Ilmu Pendidikan (STKIP). Sama halnya dengan fakultas tertua lainnya, fakultas ini berubah nama di tahun 1984 seiring dengan pembentukan Untirta. Fun fact tentang fakultas ini ialah FKIP merupakan fakultas dengan program studi terbanyak di Untirta.
+    
+    <br>
+    <br>
+    Jurusan Kuliah
+    <ul style="margin-left: 75px; margin-right: 50px; margin-top:5px; margin-bottom:8px; font-family:Arial, Helvetica, sans-serif; text-align:justify">
+      <li>Pendidikan Guru Sekolah Dasar</li><li>
+        Pendidikan Matematika</li><li>
+        Pendidikan IPA</li><li>
+        Pendidikan Khusus</li><li>
+        Pendidikan Seni dan Pertunjukan</li><li>
+        Pendidikan Guru Pendidikan Anak Usia Dini</li><li>
+        Pendidikan Sejarah</li><li>
+        Pendidikan Kimia</li><li>
+        Pendidikan Fisika</li><li>
+        Pendidikan Sosiologi</li><li>
+        Pendidikan Vokasional Teknik Mesin</li><li>
+        Pendidikan Non Formal</li><li>
+        Bimbingan dan Konseling</li><li>
+        Pendidikan Pancasila dan Kewarganegaraan</li><li>
+        Pendidikan Vokasional Teknik Elektro</li><li>
+        Pendidikan Biologi</li>
+        <li>Pendidikan Bahasa Indonesia </li>
+        <li>Pendidikan Bahasa Inggris </li>
+
+    </ul>
+  </p>
+  </section>
+
+  <script src="{% static "script.js" %}" type="text/javascript"></script>
 </body>
 </html>
