--- a/templates/faperta.html
+++ b/templates/faperta.html
@@ -27,7 +27,7 @@
         </ul>
       </li>
       <li>
-        <a href="3">
+        <a href="#">
           <i class='bx bx-bar-chart-alt-2'></i>
           <span class="link_name">FEB</span>
         </a>
